# image-align

./: CMakeLists.txt  README.md  forward_additive.h
etc/: sympy-jacobian-similarity.txt
examples/: align.cpp  optical_flow.cpp
inc/imagealign/: align_base.h  bilinear.h  config.h  forward_additive.h  forward_compositional.h  gradient.h  image_pyramid.h  imagealign.h  inverse_compositional.h  sampling.h  warp.h  warp_image.h  warp_update.h
src/: warp.cpp
tests/: algorithms.cpp  bilinear.cpp  forward_additive.cpp  regression.cpp  sampling.cpp  warp.cpp
